--- a/css/reportTicket.css
+++ b/css/reportTicket.css
@@ -4,7 +4,7 @@
 .tableTicket {width:95%;font-family:arial;font-size: 11px;/* margin-top:2px; */line-height: 11px;}
 .divSeparadorTicket {width:95%;	height:1px;background-color:#cccc}
 td{
-	font-size:9px;
+	font-size:11px;
 }
   @page { 
     margin-top: 0.5cm; 
@@ -29,3 +29,227 @@ td{
     margin-right: 0.5cm;
 }
 }
+
+
+body{
+        font-family: 'Arial', sans-serif;
+       
+    }
+
+    .ticket-container{
+        position: relative;
+        overflow: hidden;
+
+        /* Fondo blanco para contraste */
+        background: #fff;
+
+        width: 98%;
+            border: 2px solid #999999;
+        border-radius: 10px;
+        margin:0px 20px;
+    }
+
+    /* Imagen de fondo con transparencia SIN afectar al contenido */
+    .ticket-container::before {
+        content: "";
+        position: absolute;
+        top: 27%;
+        left: 0;
+        width: 100%;
+        height: 70%;
+        background-image: url('/GoodTechnologyEPNSA/iconos/iconoEmpresa.JPG'); /* Recomendado PNG */
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+
+        opacity: 0.12;   /* 🔥 Ajustá la transparencia */
+        pointer-events: none;
+    }
+
+    /* Contenido encima */
+    .ticket-container > * {
+        position: relative;
+        z-index: 3;
+    }
+
+    .ticket-header{
+        background:#3c7529;
+        color:white;
+        padding:12px;
+        border-radius:10px 10px 0 0;
+        font-size:26px;
+        font-weight:bold;
+        text-align:center;
+        letter-spacing:1px;
+    }
+
+    .ticket-subtitle{
+            text-align: center;
+            font-size: 12px;
+            color: #333;
+            margin-top: 5px;
+            margin-bottom: 10px;
+            line-height: 13px;
+    }
+
+    .ticket-table{
+        width:100%;
+        font-size:13px;
+        border-collapse:collapse;
+        margin-top:5px;
+    }
+
+    .ticket-table th{
+        padding:6px;
+        background:#ececec8c;
+        font-size:12px;
+        border-bottom:1px solid #bbb;
+        text-align:left;
+    }
+
+    .ticket-section{
+        padding:2px 8px;
+        border:1px solid #dadada;
+        border-radius:6px; 
+    }
+
+    .ticket-totales td{
+        font-size:13px;
+        padding:4px 2px;
+    }
+
+    .firma-box{
+        text-align:center;
+        width:50%;
+    }
+
+    .firma-line{ 
+        width:70%;
+        height:1px;
+        background:#000;
+        margin-left:auto;
+        margin-right:auto;
+    }
+
+    .label-firma{
+        font-size:12px;
+        margin-top:3px;
+    }
+
+    .ticket-cabecera {
+    text-align: center;
+    border-bottom: 2px solid #000;
+    padding-bottom: 6px;
+    margin-bottom: 8px;
+}
+
+.ticket-titulo {
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.ticket-subtitulo {
+    font-size: 12px;
+    margin-top: 2px;
+}
+
+
+.ticket-titulo-documento {
+    text-align: center;
+    font-size: 15px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    padding: 6px 0;
+    margin: 8px 0;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+    text-transform: uppercase;
+}
+
+.ticket-firma {
+    text-align: center;
+    font-size: 12px;
+    /* margin-top: 20px; */
+}
+
+
+/* ===== ESTILO GENERAL DEL RECIBO ===== */
+.tableRegistroFactura {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 6px 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    color: #000;
+        border-bottom: solid 1px #adaaaa;
+}
+
+/* ===== FILAS ===== */
+.tableRegistroFactura tr {
+    border-bottom: 1px dashed #000;
+}
+
+/* ===== CELDAS ===== */
+.tableRegistroFactura td {
+    padding: 6px 4px;
+    vertical-align: middle;
+}
+
+/* ===== COLUMNA DESCRIPCIÓN ===== */
+.tableRegistroFactura td:first-child {
+    text-align: left;
+    font-weight: bold;
+}
+
+/* ===== COLUMNA VALOR / DATO ===== */
+.tableRegistroFactura td:last-child {
+    text-align: right;
+    font-weight: normal;
+}
+
+/* ===== ÚLTIMA FILA SIN BORDE ===== */
+.tableRegistroFactura tr:last-child {
+    border-bottom: none;
+}
+
+
+.imgmenbrete { 
+    height: 130px;               /* alto del logo */
+    margin: 0 auto;             /* centrado horizontal */
+    background-image: url('/GoodTechnologyEPNSA/iconos/logoEPNSA.JPG');
+    background-size: contain;   /* ajusta sin deformar */
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+
+.separador {
+  border-top: 2px dashed #555;
+  position: relative;
+  margin: 15px 0;
+}
+
+.separador::after {
+  content: "✂";
+  position: absolute;
+  top: -14px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: white;
+  padding: 0 8px;
+  font-size: 18px;
+}
+
+
+.marcaFactura {
+    width: 100%;
+    text-align: end;
+    font-weight: 700;
+    font-size: 14px;
+    letter-spacing: 2px;
+    padding: 6px 0;
+    /* margin: 8px 0; */
+    border-radius: 6px;
+}
+ 
