--- a/css/style.css
+++ b/css/style.css
@@ -5818,3 +5818,272 @@ margin-bottom:5px;
     padding: 10px;
     overflow: auto;
 }
+
+
+
+/* Contenedor principal centrado */
+#divVistaArancelesCobrar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0,0,0,0.45); /* fondo oscuro modal */
+    z-index: 9999;
+}
+
+#divOpcionedDetalleFactura {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0,0,0,0.45); /* fondo oscuro modal */
+    z-index: 9999;
+}
+
+/* Caja principal */
+.divPrincipalrepor { 
+    display: flex;
+    flex-direction: column;
+}
+
+/* Header */
+.header-cobros {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px;
+}
+
+/* Cuerpo */
+.body-cobros {
+    flex: 1;
+    overflow-y: auto;
+    margin-top: 15px;
+}
+
+/* Botón */
+.footer-cobros {
+    text-align: center;
+    margin-top: 15px;
+}
+
+.footer-cobros input {
+    width: 200px;
+}
+
+
+
+.divPrincipalVista {
+     
+    width: 100%;
+    height: 100vh ;
+    min-height: 560px;
+    background-color: rgb(248, 248, 248); 
+}
+
+
+
+
+.separador {
+  border-top: 2px dashed #555;
+  position: relative;
+  margin: 40px 0;
+}
+
+.separador::after {
+  content: "✂";
+  position: absolute;
+  top: -14px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: white;
+  padding: 0 8px;
+  font-size: 18px;
+}
+
+
+
+
+
+.btn-eliminar:hover {
+  background: #a71d2a;
+}
+
+ 
+:root {
+  --verde: #2ecc71;
+  --rojo: #e74c3c;
+  --gris: #444;
+  --gris-claro: #f9fafb;
+  --radio: 14px;
+  --fuente: "Poppins", Arial, sans-serif;
+}
+
+body {
+  background: #f3f5f8;
+  font-family: var(--fuente);
+  margin: 0;
+  padding: 0;
+}
+
+.taentrada{
+text-align: justify;
+}
+
+.taSalida{
+    text-align: end;
+}
+
+.titulo {
+  text-align: center; 
+  color: var(--gris);
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+
+.timeline-container {
+  width: 95%;
+  max-width: 700px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.timeline {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5px 0;
+}
+
+/* Línea central */
+.timeline::before {
+  content: "";
+  position: absolute;
+  width: 4px;
+  background: linear-gradient(180deg, var(--verde), var(--rojo));
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 2px;
+  animation: brillo 3s linear infinite;
+}
+
+@keyframes brillo {
+  0% { box-shadow: 0 0 10px rgba(46, 204, 113, 0.4); }
+  50% { box-shadow: 0 0 20px rgba(231, 76, 60, 0.4); }
+  100% { box-shadow: 0 0 10px rgba(46, 204, 113, 0.4); }
+}
+
+.timeline-item {
+  position: relative;
+ 
+  padding: 5px;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.timeline-item::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: -10px;
+  transform: translateX(-50%);
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  background: #fff;
+  border: 4px solid #ccc;
+  box-shadow: 0 0 6px rgba(0,0,0,0.1);
+  z-index: 2;
+}
+
+/* Contenido */
+.timeline-content {
+  background: #fff;
+  border-radius: var(--radio);
+  padding: 5px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+  transition: all 0.3s ease;
+  margin-bottom: 20px;
+}
+
+.timeline-content:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 10px 24px rgba(0,0,0,0.12);
+}
+
+.timeline-item h3 {
+  margin: 0 0 10px;
+  font-size: 1rem;
+  font-weight: 600;
+  color: var(--gris);
+}
+
+.timeline-item input {
+  width: 100%;
+  border: none;
+  padding: 5px 12px;
+  font-size: 0.95rem;
+  background: #f5f6f7;
+  border-radius: 8px; 
+  font-weight: 500;
+  color: #333;
+}
+.timeline-item input:focus {
+  outline: none;
+  background: #fff;
+  box-shadow: inset 0 0 4px rgba(0,0,0,0.1);
+}
+
+/* Entradas */
+.timeline-item.entrada .timeline-content {
+  border-left: 6px solid var(--verde);
+}
+
+/* Salidas */
+.timeline-item.salida .timeline-content {
+  border-right: 6px solid var(--rojo);
+}
+
+/* Responsive */
+@media (max-width: 600px) {
+  .timeline-item {
+    width: 90%;
+  }
+} 
+
+.timeline-item.neutro {
+  border-radius: 10px;
+  padding: 10px 20px;
+  margin: 15px 0;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+  text-align: center;
+  transition: 0.2s ease;
+}
+
+.timeline-item.neutro:hover {
+  background: #f0f0f0;
+  border-left-color: #999;
+}
+
+.timeline-item.neutro h3 {
+  margin: 0;
+  font-size: 1rem;
+  color: #333;
+}
+
+.timeline-item.neutro p {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #222;
+  margin: 5px 0 0;
+}
